Added the skeleton of the project.

--- a/src/Website/index.html
+++ b/src/Website/index.html
@@ -1,9 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-        <title>Happy Sad!</title>
+        <title>Happy Sad</title>
+        
+        <link rel="stylesheet" href="css/normalize.css" />
+        <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
-
+        
+        <script src="js/jquery-1.11.0.js"></script>
     </body>
 </html>
