--- a/src/Website/index.html
+++ b/src/Website/index.html
@@ -9,5 +9,6 @@
     <body>
         
         <script src="js/jquery-1.11.0.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
